<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.demo.easylearn.LoginActivity"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:layout_width="141dp"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="293dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:paddingLeft="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="298dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:inputType = "textPassword"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/purple_500"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/not_registered"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:text="@string/register"
                android:textColor="@color/purple_500"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>